<resources>
    <string name="app_name">DanDy4e</string>
    <string name="action_settings">Settings</string>
    <string name="name_label">Name:</string>
    <string name="race_label">Race:</string>
    <string name="class_label">Class:</string>
    <string name="level_label">Level:</string>
    <string name="action_new">Create New Character</string>
    <string name="cc_activity_name">Character Creation</string>
    <string name="action_accept">Create</string>
    <string name="title_detail_list">Details</string>
    <string name="title_detail_detail">Detail Detail</string>
    <string name="experience_label">XP:</string>
    <string name="paragon_label">Paragon:</string>
    <string name="epic_label">Epic:</string>
    <string name="misc_label">Misc:</string>
</resources>
