<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="character"
            type="com.akg.dandy4e.database.object.Character"/>
    </data>

    <ScrollView
        android:id="@+id/fdet_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/fdet_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fdet_name_label"
                style="@style/fdet_label_L"
                android:labelFor="@+id/fdet_name_field"
                android:text="@string/name_label"/>

            <EditText
                android:id="@+id/fdet_name_field"
                style="@style/fdet_field"
                android:layout_alignBottom="@+id/fdet_name_label"
                android:layout_alignTop="@+id/fdet_name_label"
                android:inputType="textPersonName"
                android:text="@{character.characterName}"
                />

            <TextView
                android:id="@+id/fdet_level_label"
                style="@style/fdet_label_M"
                android:layout_below="@+id/fdet_name_label"
                android:labelFor="@+id/fdet_level_field"
                android:text="@string/level_label"/>

            <EditText
                android:id="@+id/fdet_level_field"
                style="@style/fdet_field"
                android:layout_alignBottom="@+id/fdet_level_label"
                android:layout_alignParentEnd="false"
                android:layout_alignTop="@+id/fdet_level_label"
                android:layout_below="@+id/fdet_name_field"
                android:inputType="number"
                android:paddingRight="50dp"
                android:text="@{String.valueOf(character.characterLevel)}"/>

            <TextView
                android:id="@+id/fdet_experience_label"
                style="@style/fdet_label_M"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/fdet_name_label"
                android:layout_toEndOf="@+id/fdet_level_field"
                android:labelFor="@+id/fdet_experience_field"
                android:text="@string/experience_label"/>

            <EditText
                android:id="@+id/fdet_experience_field"
                style="@style/fdet_field"
                android:layout_alignBottom="@+id/fdet_experience_label"
                android:layout_alignTop="@+id/fdet_experience_label"
                android:layout_below="@+id/fdet_name_field"
                android:layout_toEndOf="@+id/fdet_experience_label"
                android:inputType="number"/>

            <TextView
                android:id="@+id/fdet_race_label"
                style="@style/fdet_label_M"
                android:layout_below="@+id/fdet_experience_label"
                android:labelFor="@+id/fdet_race_field"
                android:text="@string/race_label"/>

            <EditText
                android:id="@+id/fdet_race_field"
                style="@style/fdet_field"
                android:layout_alignBottom="@+id/fdet_race_label"
                android:layout_alignTop="@+id/fdet_race_label"
                android:layout_below="@+id/fdet_experience_field"
                android:inputType="textCapWords"
                android:text="@{character.characterRace}"/>

            <TextView
                android:id="@+id/fdet_class_label"
                style="@style/fdet_label_M"
                android:layout_below="@+id/fdet_race_label"
                android:labelFor="@+id/fdet_class_field"
                android:text="@string/class_label"/>

            <EditText
                android:id="@+id/fdet_class_field"
                style="@style/fdet_field"
                android:layout_alignBottom="@+id/fdet_class_label"
                android:layout_alignTop="@+id/fdet_class_label"
                android:layout_below="@+id/fdet_race_field"
                android:inputType="textCapWords"
                android:text="@{character.characterClass}"/>

            <TextView
                android:id="@+id/fdet_paragon_label"
                style="@style/fdet_label_M"
                android:layout_below="@+id/fdet_class_label"
                android:labelFor="@+id/fdet_paragon_field"
                android:text="@string/paragon_label"/>

            <EditText
                android:id="@+id/fdet_paragon_field"
                style="@style/fdet_field"
                android:layout_alignBottom="@+id/fdet_paragon_label"
                android:layout_alignTop="@+id/fdet_paragon_label"
                android:layout_below="@+id/fdet_class_field"
                android:inputType="textCapWords"/>

            <TextView
                android:id="@+id/fdet_epic_label"
                style="@style/fdet_label_M"
                android:layout_below="@+id/fdet_paragon_label"
                android:labelFor="@+id/fdet_epic_field"
                android:text="@string/epic_label"/>

            <EditText
                android:id="@+id/fdet_epic_field"
                style="@style/fdet_field"
                android:layout_alignBottom="@+id/fdet_epic_label"
                android:layout_alignTop="@+id/fdet_epic_label"
                android:layout_below="@+id/fdet_paragon_field"
                android:inputType="textCapWords"/>

            <TextView
                android:id="@+id/fdet_misc_label"
                style="@style/fdet_label_M"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/fdet_epic_label"
                android:labelFor="@+id/fdet_misc_field"
                android:text="@string/misc_label"/>

            <EditText
                android:id="@+id/fdet_misc_field"
                style="@style/fdet_field"
                android:layout_alignBottom="@+id/fdet_misc_label"
                android:layout_alignTop="@+id/fdet_misc_label"
                android:layout_below="@+id/fdet_epic_field"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"/>
        </RelativeLayout>
    </ScrollView>
</layout>
